// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated TabStops Results Detect and display out of order failures 1`] = `
<DocumentFragment>
  <div
    class="collapsible-requirement-details-group--{{CSS_MODULE_HASH}} collapsible-container--{{CSS_MODULE_HASH}}"
    data-automation-id="tab-stops-results-group"
  >
    <div
      aria-level="3"
      role="heading"
    >
      <button
        aria-expanded="true"
        aria-label="tab-order 4 Failed The tab order is consistent with the logical order that's communicated visually."
        class="ms-Button ms-Button--action ms-Button--command collapsible-control--{{CSS_MODULE_HASH}} root-000"
        data-automation-id="collapsible-component-cards-button"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-000"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="collapsible-title--{{CSS_MODULE_HASH}}"
          >
            <span
              class="requirement-detail--{{CSS_MODULE_HASH}}"
            >
              <span
                class="outcome-chip-container--{{CSS_MODULE_HASH}}"
              >
                <span
                  aria-hidden="true"
                >
                  <span
                    class="outcome-chip outcome-chip-fail"
                    title="4 Failed"
                  >
                    <span
                      class="icon"
                    >
                      <span
                        class="check-container"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="8"
                            cy="8"
                            fill="#E81123"
                            r="8"
                          />
                          <path
                            d="M10.9837 6.27639C11.3352 5.92491 11.3352 5.35507 10.9837 5.00359C10.6322 4.65212 10.0624 4.65212 9.7109 5.00359L7.99722 6.71728L6.28375 5.00381C5.93227 4.65234 5.36242 4.65234 5.01095 5.00381C4.65948 5.35528 4.65948 5.92513 5.01095 6.2766L6.72443 7.99007L4.9837 9.7308C4.63222 10.0823 4.63222 10.6521 4.9837 11.0036C5.33517 11.3551 5.90502 11.3551 6.25649 11.0036L7.99722 9.26287L9.73816 11.0038C10.0896 11.3553 10.6595 11.3553 11.011 11.0038C11.3624 10.6523 11.3624 10.0825 11.011 9.73101L9.27001 7.99007L10.9837 6.27639Z"
                            fill="var(--neutral-0)"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      aria-hidden="true"
                      class="count"
                      data-automation-id="count"
                    >
                       4
                    </span>
                    <span
                      class="screen-reader-only"
                    >
                      4 Failed
                    </span>
                  </span>
                </span>
              </span>
              <span>
                <span
                  class="requirement-details-id--{{CSS_MODULE_HASH}}"
                >
                  Tab order
                </span>
                : 
                <span
                  class="requirement-detail-description--{{CSS_MODULE_HASH}}"
                >
                  The tab order is consistent with the logical order that's communicated visually.
                </span>
              </span>
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      class="collapsible-container-content--{{CSS_MODULE_HASH}}"
    >
      <div
        class="ms-Viewport"
        style="min-width: 1px; min-height: 1px;"
      >
        <div
          class="ms-DetailsList is-horizontalConstrained failed-instances-details--{{CSS_MODULE_HASH}} root-000"
          data-automationid="DetailsList"
          data-is-scrollable="false"
        >
          <div
            aria-colcount="2"
            aria-readonly="true"
            aria-rowcount="5"
            role="grid"
          >
            <div
              class="ms-DetailsList-headerWrapper headerWrapper-000"
              role="presentation"
            />
            <div
              class="ms-DetailsList-contentWrapper contentWrapper-000"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-000 focusZone-000"
                data-focuszone-id="FocusZone000"
              >
                <div
                  class="ms-SelectionZone"
                  role="presentation"
                >
                  <div
                    class="ms-List"
                    role="presentation"
                  >
                    <div
                      class="ms-List-surface"
                      role="presentation"
                    >
                      <div
                        class="ms-List-page"
                        role="presentation"
                      >
                        <div
                          class="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index="0"
                          role="presentation"
                        >
                          <div
                            aria-rowindex="1"
                            aria-selected="false"
                            class="ms-FocusZone css-000 ms-DetailsRow is-contentUnselectable root-000"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone000"
                            data-is-focusable="true"
                            data-item-index="0"
                            data-selection-index="0"
                            role="row"
                            style="min-width: 901px;"
                          >
                            <div
                              class="ms-DetailsRow-fields fields-000"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex="1"
                                aria-readonly="true"
                                class="ms-DetailsRow-cell cell-000 cellUnpadded-000"
                                data-automation-key="failureDescription"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style="width: 420px;"
                              >
                                <div>
                                  <div>
                                    <div
                                      class="ms-TooltipHost root-000"
                                    >
                                      <div
                                        class="all-content--{{CSS_MODULE_HASH}}"
                                      >
                                        <strong
                                          class="instance-header--{{CSS_MODULE_HASH}}"
                                        >
                                          Comment: 
                                        </strong>
                                        <div
                                          class="assessment-instance-textContent--{{CSS_MODULE_HASH}}"
                                          data-automation-id="instance-table-text-content"
                                        >
                                          Element a[href$="chapter2\\.html"] precedes a[href$="chapter3\\.html"] but was visited first in tab order
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex="2"
                                aria-readonly="true"
                                class="ms-DetailsRow-cell cell-000 cellUnpadded-000"
                                data-automation-key="instanceActionButtons"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style="width: 521px;"
                              >
                                <button
                                  class="ms-Link edit-button--{{CSS_MODULE_HASH}} root-000"
                                  tabindex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-label="edit instance"
                                    class="root-000"
                                    data-icon-name="edit"
                                  >
                                    
                                  </i>
                                </button>
                                <button
                                  class="ms-Link remove-button--{{CSS_MODULE_HASH}} root-000"
                                  tabindex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-label="delete instance"
                                    class="root-000"
                                    data-icon-name="delete"
                                  >
                                    
                                  </i>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked="false"
                              class="checkCover-000"
                              data-selection-toggle="true"
                              role="checkbox"
                            />
                          </div>
                        </div>
                        <div
                          class="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index="1"
                          role="presentation"
                        >
                          <div
                            aria-rowindex="2"
                            aria-selected="false"
                            class="ms-FocusZone css-000 ms-DetailsRow is-contentUnselectable root-000"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone000"
                            data-is-focusable="true"
                            data-item-index="1"
                            data-selection-index="1"
                            role="row"
                            style="min-width: 901px;"
                          >
                            <div
                              class="ms-DetailsRow-fields fields-000"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex="1"
                                aria-readonly="true"
                                class="ms-DetailsRow-cell cell-000 cellUnpadded-000"
                                data-automation-key="failureDescription"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style="width: 420px;"
                              >
                                <div>
                                  <div>
                                    <div
                                      class="ms-TooltipHost root-000"
                                    >
                                      <div
                                        class="all-content--{{CSS_MODULE_HASH}}"
                                      >
                                        <strong
                                          class="instance-header--{{CSS_MODULE_HASH}}"
                                        >
                                          Comment: 
                                        </strong>
                                        <div
                                          class="assessment-instance-textContent--{{CSS_MODULE_HASH}}"
                                          data-automation-id="instance-table-text-content"
                                        >
                                          Element a[href$="chapter1\\.html"] precedes a[href$="chapter2\\.html"] but was visited first in tab order
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex="2"
                                aria-readonly="true"
                                class="ms-DetailsRow-cell cell-000 cellUnpadded-000"
                                data-automation-key="instanceActionButtons"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style="width: 521px;"
                              >
                                <button
                                  class="ms-Link edit-button--{{CSS_MODULE_HASH}} root-000"
                                  tabindex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-label="edit instance"
                                    class="root-000"
                                    data-icon-name="edit"
                                  >
                                    
                                  </i>
                                </button>
                                <button
                                  class="ms-Link remove-button--{{CSS_MODULE_HASH}} root-000"
                                  tabindex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-label="delete instance"
                                    class="root-000"
                                    data-icon-name="delete"
                                  >
                                    
                                  </i>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked="false"
                              class="checkCover-000"
                              data-selection-toggle="true"
                              role="checkbox"
                            />
                          </div>
                        </div>
                        <div
                          class="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index="2"
                          role="presentation"
                        >
                          <div
                            aria-rowindex="3"
                            aria-selected="false"
                            class="ms-FocusZone css-000 ms-DetailsRow is-contentUnselectable root-000"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone000"
                            data-is-focusable="true"
                            data-item-index="2"
                            data-selection-index="2"
                            role="row"
                            style="min-width: 901px;"
                          >
                            <div
                              class="ms-DetailsRow-fields fields-000"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex="1"
                                aria-readonly="true"
                                class="ms-DetailsRow-cell cell-000 cellUnpadded-000"
                                data-automation-key="failureDescription"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style="width: 420px;"
                              >
                                <div>
                                  <div>
                                    <div
                                      class="ms-TooltipHost root-000"
                                    >
                                      <div
                                        class="all-content--{{CSS_MODULE_HASH}}"
                                      >
                                        <strong
                                          class="instance-header--{{CSS_MODULE_HASH}}"
                                        >
                                          Comment: 
                                        </strong>
                                        <div
                                          class="assessment-instance-textContent--{{CSS_MODULE_HASH}}"
                                          data-automation-id="instance-table-text-content"
                                        >
                                          Element a[href$="chapter2\\.html"] precedes a[href$="chapter3\\.html"] but was visited first in tab order
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex="2"
                                aria-readonly="true"
                                class="ms-DetailsRow-cell cell-000 cellUnpadded-000"
                                data-automation-key="instanceActionButtons"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style="width: 521px;"
                              >
                                <button
                                  class="ms-Link edit-button--{{CSS_MODULE_HASH}} root-000"
                                  tabindex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-label="edit instance"
                                    class="root-000"
                                    data-icon-name="edit"
                                  >
                                    
                                  </i>
                                </button>
                                <button
                                  class="ms-Link remove-button--{{CSS_MODULE_HASH}} root-000"
                                  tabindex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-label="delete instance"
                                    class="root-000"
                                    data-icon-name="delete"
                                  >
                                    
                                  </i>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked="false"
                              class="checkCover-000"
                              data-selection-toggle="true"
                              role="checkbox"
                            />
                          </div>
                        </div>
                        <div
                          class="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index="3"
                          role="presentation"
                        >
                          <div
                            aria-rowindex="4"
                            aria-selected="false"
                            class="ms-FocusZone css-000 ms-DetailsRow is-contentUnselectable root-000"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone000"
                            data-is-focusable="true"
                            data-item-index="3"
                            data-selection-index="3"
                            role="row"
                            style="min-width: 901px;"
                          >
                            <div
                              class="ms-DetailsRow-fields fields-000"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex="1"
                                aria-readonly="true"
                                class="ms-DetailsRow-cell cell-000 cellUnpadded-000"
                                data-automation-key="failureDescription"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style="width: 420px;"
                              >
                                <div>
                                  <div>
                                    <div
                                      class="ms-TooltipHost root-000"
                                    >
                                      <div
                                        class="all-content--{{CSS_MODULE_HASH}}"
                                      >
                                        <strong
                                          class="instance-header--{{CSS_MODULE_HASH}}"
                                        >
                                          Comment: 
                                        </strong>
                                        <div
                                          class="assessment-instance-textContent--{{CSS_MODULE_HASH}}"
                                          data-automation-id="instance-table-text-content"
                                        >
                                          Element a[href$="chapter1\\.html"] precedes a[href$="chapter2\\.html"] but was visited first in tab order
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex="2"
                                aria-readonly="true"
                                class="ms-DetailsRow-cell cell-000 cellUnpadded-000"
                                data-automation-key="instanceActionButtons"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style="width: 521px;"
                              >
                                <button
                                  class="ms-Link edit-button--{{CSS_MODULE_HASH}} root-000"
                                  tabindex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-label="edit instance"
                                    class="root-000"
                                    data-icon-name="edit"
                                  >
                                    
                                  </i>
                                </button>
                                <button
                                  class="ms-Link remove-button--{{CSS_MODULE_HASH}} root-000"
                                  tabindex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-label="delete instance"
                                    class="root-000"
                                    data-icon-name="delete"
                                  >
                                    
                                  </i>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked="false"
                              class="checkCover-000"
                              data-selection-toggle="true"
                              role="checkbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Automated TabStops Results Detect and display unreachable elements failures 1`] = `
<DocumentFragment>
  <div
    class="collapsible-requirement-details-group--{{CSS_MODULE_HASH}} collapsible-container--{{CSS_MODULE_HASH}}"
    data-automation-id="tab-stops-results-group"
  >
    <div
      aria-level="3"
      role="heading"
    >
      <button
        aria-expanded="true"
        aria-label="keyboard-traps 1 Failed There are no interactive elements that “trap” input focus and prevent navigating away."
        class="ms-Button ms-Button--action ms-Button--command collapsible-control--{{CSS_MODULE_HASH}} root-000"
        data-automation-id="collapsible-component-cards-button"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-000"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="collapsible-title--{{CSS_MODULE_HASH}}"
          >
            <span
              class="requirement-detail--{{CSS_MODULE_HASH}}"
            >
              <span
                class="outcome-chip-container--{{CSS_MODULE_HASH}}"
              >
                <span
                  aria-hidden="true"
                >
                  <span
                    class="outcome-chip outcome-chip-fail"
                    title="1 Failed"
                  >
                    <span
                      class="icon"
                    >
                      <span
                        class="check-container"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="8"
                            cy="8"
                            fill="#E81123"
                            r="8"
                          />
                          <path
                            d="M10.9837 6.27639C11.3352 5.92491 11.3352 5.35507 10.9837 5.00359C10.6322 4.65212 10.0624 4.65212 9.7109 5.00359L7.99722 6.71728L6.28375 5.00381C5.93227 4.65234 5.36242 4.65234 5.01095 5.00381C4.65948 5.35528 4.65948 5.92513 5.01095 6.2766L6.72443 7.99007L4.9837 9.7308C4.63222 10.0823 4.63222 10.6521 4.9837 11.0036C5.33517 11.3551 5.90502 11.3551 6.25649 11.0036L7.99722 9.26287L9.73816 11.0038C10.0896 11.3553 10.6595 11.3553 11.011 11.0038C11.3624 10.6523 11.3624 10.0825 11.011 9.73101L9.27001 7.99007L10.9837 6.27639Z"
                            fill="var(--neutral-0)"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      aria-hidden="true"
                      class="count"
                      data-automation-id="count"
                    >
                       1
                    </span>
                    <span
                      class="screen-reader-only"
                    >
                      1 Failed
                    </span>
                  </span>
                </span>
              </span>
              <span>
                <span
                  class="requirement-details-id--{{CSS_MODULE_HASH}}"
                >
                  Keyboard traps
                </span>
                : 
                <span
                  class="requirement-detail-description--{{CSS_MODULE_HASH}}"
                >
                  There are no interactive elements that “trap” input focus and prevent navigating away.
                </span>
              </span>
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      class="collapsible-container-content--{{CSS_MODULE_HASH}}"
    >
      <div
        class="ms-Viewport"
        style="min-width: 1px; min-height: 1px;"
      >
        <div
          class="ms-DetailsList is-horizontalConstrained failed-instances-details--{{CSS_MODULE_HASH}} root-000"
          data-automationid="DetailsList"
          data-is-scrollable="false"
        >
          <div
            aria-colcount="2"
            aria-readonly="true"
            aria-rowcount="2"
            role="grid"
          >
            <div
              class="ms-DetailsList-headerWrapper headerWrapper-000"
              role="presentation"
            />
            <div
              class="ms-DetailsList-contentWrapper contentWrapper-000"
              role="presentation"
            >
              <div
                class="ms-FocusZone css-000 focusZone-000"
                data-focuszone-id="FocusZone000"
              >
                <div
                  class="ms-SelectionZone"
                  role="presentation"
                >
                  <div
                    class="ms-List"
                    role="presentation"
                  >
                    <div
                      class="ms-List-surface"
                      role="presentation"
                    >
                      <div
                        class="ms-List-page"
                        role="presentation"
                      >
                        <div
                          class="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index="0"
                          role="presentation"
                        >
                          <div
                            aria-rowindex="1"
                            aria-selected="false"
                            class="ms-FocusZone css-000 ms-DetailsRow is-contentUnselectable root-000"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone000"
                            data-is-focusable="true"
                            data-item-index="0"
                            data-selection-index="0"
                            role="row"
                            style="min-width: 901px;"
                          >
                            <div
                              class="ms-DetailsRow-fields fields-000"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex="1"
                                aria-readonly="true"
                                class="ms-DetailsRow-cell cell-000 cellUnpadded-000"
                                data-automation-key="failureDescription"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style="width: 420px;"
                              >
                                <div>
                                  <div>
                                    <div
                                      class="ms-TooltipHost root-000"
                                    >
                                      <div
                                        class="all-content--{{CSS_MODULE_HASH}}"
                                      >
                                        <strong
                                          class="instance-header--{{CSS_MODULE_HASH}}"
                                        >
                                          Comment: 
                                        </strong>
                                        <div
                                          class="assessment-instance-textContent--{{CSS_MODULE_HASH}}"
                                          data-automation-id="instance-table-text-content"
                                        >
                                          Focus is still on element #ex3ch2 500ms after pressing tab
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex="2"
                                aria-readonly="true"
                                class="ms-DetailsRow-cell cell-000 cellUnpadded-000"
                                data-automation-key="instanceActionButtons"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style="width: 521px;"
                              >
                                <button
                                  class="ms-Link edit-button--{{CSS_MODULE_HASH}} root-000"
                                  tabindex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-label="edit instance"
                                    class="root-000"
                                    data-icon-name="edit"
                                  >
                                    
                                  </i>
                                </button>
                                <button
                                  class="ms-Link remove-button--{{CSS_MODULE_HASH}} root-000"
                                  tabindex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-label="delete instance"
                                    class="root-000"
                                    data-icon-name="delete"
                                  >
                                    
                                  </i>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked="false"
                              class="checkCover-000"
                              data-selection-toggle="true"
                              role="checkbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
